# mavlink-router

./: CMakeLists.txt  mavlink-router.cmake
include/mavlink/common/: common.h
src/: CMakeLists.txt
src/common/: log.cpp  xtermios.cpp
src/mavlink-router/: endpoint.cpp  endpoint.h  logendpoint.cpp  logendpoint.h  main.cpp  mainloop.cpp  mainloop.h
